# encdec-from-nanogpt

./: .gitignore  bpe_iwslt2023_vocab300.json  bpe_shakespeare_vocab1000.json  iwslt-da2023-bpe-tokenizer.json  pyproject.toml
notebooks/: bpe.ipynb  iwslt2023.ipynb  iwslt2023_bpe.py
ref/: simplified_nanogpt.py
src/nanogpt/: bpe_shakespeare_vocab300.json  bpe_shakespeare_vocab5000.json  bpe_tokenizer.py  config.py  generate.py  model.py  train.py
src/seq2seq-from-nanogpt/: bpe_tokenizer.py  config.py  generate.py  model.py  preprocess_data.py  train.py
