[project]
name = "encdec-from-nanogpt"
version = "0.1.0"
description = "A nanoGPT-based Encoder-Decoder model for sequence-to-sequence tasks."
authors = [{ name = "Wentao He", email = "wentaohe@umich.edu" }]
requires-python = ">=3.10"

# 这里是核心依赖项
dependencies = [
    "transformers",
    "sacrebleu",
    "tqdm",
    "torch>=2.5.1",
    "datasets==3.6.0",
]
